<resources>
    <string name="app_name">mini RTO</string>
    <string name="app_link">https://goo.gl/iyGuqz</string>
    <string name="app_link_direct">https://play.google.com/store/apps/details?id=com.chandruscm.minirto</string>
    <string name="other_apps_link">http://play.google.com/store/apps/dev?id=5632908098427880446</string>
    <string name="vehicle_tab">search vehicle</string>
    <string name="recent_search_header">RECENT SEARCHES</string>
    <string name="card_header_fuel">Fuel Type</string>
    <string name="card_header_cc">Displacement</string>
    <string name="card_header_engine">Engine No.</string>
    <string name="card_header_chassis">Chassis No.</string>
    <string name="card_header_owner">Owner</string>
    <string name="card_header_location">Location</string>
    <string name="office_tab">search office</string>
    <string name="default_state">STATE</string>
    <string name="default_code">RTO CODE</string>
    <string name="default_district">District</string>
    <string name="first_state">ANDAMAN AND NICOBAR ISLANDS</string>
    <string name="first_state_code">AN</string>
    <string name="website">Visit the official website</string>
    <string name="clipboard_acknowledge">Copied to clipboard</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="okay">OKAY</string>
    <string name="dismiss">DISMISS</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>
    <string name="choose">CHOOSE</string>
    <string name="agree">AGREE</string>
    <string name="disagree">DISAGREE</string>
    <string name="more">LEARN MORE</string>
    <string name="continue_button">CONTINUE</string>
    <string name="retry">RETRY</string>
    <string name="check">CHECK</string>
    <string name="captcha_header">Verify</string>
    <string name="captcha_message">Enter captcha code</string>
    <string name="fetch_website_button">WEBSITE</string>
    <string name="fetch_website">https://parivahan.gov.in/parivahan/</string>
    <string name="fetch_header">where mini RTO looks</string>
    <string name="fetch_content">
    <![CDATA[
    <b>National Transport Project – Vahan and Sarathi</b><br><br>
    Transport Mission Mode Project – through its flagship applications Vahan (for Vehicle Registration) and Sarathi (for Driving License) – has achieved 100% automation of 1000+ RTOs all across the country. Almost 19.6 crore Vehicle records and 9.2 crore License records are available in its repository. The consolidated data in State and National Registry act as the base for a large number of online citizen-centric applications and information services.
    <br><br> Now the RTO-centric Vahan and Sarathi applications have been revamped to Centralized, Web-enabled architecture with single database and application for the whole country. The system is accessible over internet for RTO users through secured log-in and authentication. Online services are also facilitated to citizen, trade and so on so that for availing transport services, RTO visits can be minimized. There will be emphasis on modern ICT tools like cloud infrastructure, Centralized Authentication System (CAS) and Single Sign On (SSO), Multi-device capability, Multi-lingual support, Open API, Mobile Apps and so on. Quality and scope of G-G/G-B/G-C services will be enhanced.
    <br><br> The new system will consolidate the database and applications for all RTOs across all states into a common, centralized platform and deliver the core services of Vahan and Sarathi throughout the country. This will be built on the backbone of a robust data network with adequate bandwidth and built-in redundancy to facilitate highest acceptable standard of speed, information security and fault tolerance. The data and application for the whole country will be maintained in a national level data center backed up by a Disaster Recovery Center – both of which will have the latest hardware, software and control infrastructure to achieve optimum operational performance, safety and security.
    <br><br> The development of the new system is complete and implementation has already started in Delhi, Uttarakhand, Chandigarh, Himachal Pradesh, Odisha and so on. Roll-out is planned in all states in the next few months. Once implemented, the new system will make the transport system much secure, transparent and user-friendly for Citizen, Trade and Government.
    <br><br><b>Hyperlink Policy</b>
    <br><br>We do not object to you linking directly to the information that is hosted on our site and no prior permission is required for the same. However, we would like you to inform us about any links provided to our site so that you can be informed of any changes or updations therein. Also, we do not permit our pages to be loaded into frames on your site. Our Department\'s pages must load into a newly opened browser window of the user.
    ]]></string>
    <string name="about_header">about mini RTO</string>
    <string name="rate">RATE</string>
    <string name="github">GITHUB</string>
    <string name="other_apps">OTHER APPS</string>
    <string name="author_header">AUTHOR</string>
    <string name="credits_header">CREDITS</string>
    <string name="libraries_header">OPEN SOURCE LICENSES</string>
    <string name="legal_header">LEGAL</string>
    <string name="source_header">Source &amp; permission</string>
    <string name="source_content">Parivahan Sewa</string>
    <string name="version_header">VERSION</string>
    <string name="build_version">Build version</string>
    <string name="database_version">Database version</string>
    <string name="dev_1_title">Chandramohan Sudar</string>
    <string name="dev_1_name">\@chandru_scm</string>
    <string name="dev_1_link">https://chandruscm.com</string>
    <string name="dev_2_title">RegEx validation</string>
    <string name="dev_2_name">Arjun Sanker</string>
    <string name="dev_2_link">https://www.linkedin.com/in/arjun-sanker-55a5a612a/</string>
    <string name="lib_1">jsoup Java HTML Parser</string>
    <string name="lib_1_author">Jonathan Hedley</string>
    <string name="lib_1_link">https://github.com/jhy/jsoup/</string>
    <string name="lib_1_license"><![CDATA[
    Copyright © 2009 - 2016 Jonathan Hedley (jonathan@hedley.net)]]>
    </string>
    <string name="lib_2">Android SQLiteAssetHelper</string>
    <string name="lib_2_author">Jeff Gilfelt</string>
    <string name="lib_2_link">https://github.com/jgilfelt/android-sqlite-asset-helper</string>
    <string name="lib_2_license"><![CDATA[
    Copyright © 2011 readyState Software Ltd
    <br>Copyright © 2007 The Android Open Source Project]]></string>
    <string name="lib_3">Card Library</string>
    <string name="lib_3_author">Gabriele Mariotti</string>
    <string name="lib_3_link">https://github.com/gabrielemariotti/cardslib</string>
    <string name="lib_3_license"><![CDATA[Copyright © 2013-2014 Gabriele Mariotti]]>
    </string>
    <string name="lib_4">Sticky Headers RecyclerView</string>
    <string name="lib_4_author">Timehop</string>
    <string name="lib_4_link">https://github.com/timehop/sticky-headers-recyclerview</string>
    <string name="lib_4_license"><![CDATA[Copyright © 2014 Jacob Tabak - Timehop ]]>
    </string>
    <string name="lib_5">RecyclerView FastScroll</string>
    <string name="lib_5_author">Tim Malseed</string>
    <string name="lib_5_link">https://github.com/timusus/RecyclerView-FastScroll</string>
    <string name="lib_5_license"><![CDATA[
    Copyright © 2016 Tim Malseed
    <br>Copyright © 2010 The Android Open Source Project]]></string>
    <string name="lib_6">Material Dialogs</string>
    <string name="lib_6_author">Aidan Follestad</string>
    <string name="lib_6_link">https://github.com/afollestad/material-dialogs</string>
    <string name="lib_6_license"><![CDATA[Copyright © 2014–2016 Aidan Michael Follestad]]></string>
    <string name="lib_7">Floating Action Button</string>
    <string name="lib_7_author">Dmytro Tarianyk</string>
    <string name="lib_7_link">https://github.com/Clans/FloatingActionButton</string>
    <string name="lib_7_license"><![CDATA[Copyright © 2015 Dmytro Tarianyk]]></string>
    <string name="lib_8">Material Tap Target Prompt</string>
    <string name="lib_8_author">Samuel Wall</string>
    <string name="lib_8_link">https://github.com/sjwall/MaterialTapTargetPrompt</string>
    <string name="lib_8_license"><![CDATA[Copyright © 2016 Samuel Wall ]]></string>
    <string name="lib_9">Android Tooltip</string>
    <string name="lib_9_author">Alessandro Crugnola</string>
    <string name="lib_9_link">https://github.com/sephiroth74/android-target-tooltip</string>
    <string name="lib_9_license"><![CDATA[Copyright © 2016 Alessandro Crugnola ]]></string>
    <string name="lib_10">Material Icons</string>
    <string name="lib_10_author">Google</string>
    <string name="lib_10_link">https://github.com/google/material-design-icons/</string>
    <string name="lib_10_license"><![CDATA[Copyright © 2016 Google ]]></string>
    <string name="lib_11">Commons Lang</string>
    <string name="lib_11_author">Apache</string>
    <string name="lib_11_link">https://github.com/apache/commons-lang</string>
    <string name="lib_11_license"><![CDATA[Copyright © 2016 The Apache Software Foundation]]></string>
    <string name="mit_license"><![CDATA[
    <br><br>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
    <br><br>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
    <br><br>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
    ]]></string>
    <string name="apache_license"><![CDATA[
    <br><br>Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
    <br><br><a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>
    <br><br>Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
    ]]></string>
    <string name="share_header">Share</string>
    <string name="text">TEXT</string>
    <string name="image">IMAGE</string>
    <string name="share_content">You can share details as text or image.</string>
    <string name="share_search">Share this search</string>
    <string name="share_button">SHARE</string>
    <string name="share_app_prefix">Get mini RTO </string>
    <string name="remove_search">Remove this search</string>
    <string name="remove_button">REMOVE</string>
    <string name="remove_header">Remove</string>
    <string name="search">Search</string>
    <string name="search_content_vehicle">Enter registration number</string>
    <string name="search_hint_vehicle">KL 01 AW 6707</string>
    <string name="search_prefill"></string>
    <string name="search_hint_office">Thiruvananthapuram</string>
</resources>